common-lib/common-lib/src/main/java/com/example/disributed_lovable/CommonLib/common_lib/error/ResourceNotFoundException.java
package com.example.disributed_lovable.CommonLib.common_lib.error;

public class ResourceNotFoundException extends RuntimeException
{

    public ResourceNotFoundException(String message)
    {
        super(message);
    }
}
